[project]
name = "transformers"
version = "0.1.0"
description = ""

authors = [
    {name = "andresqb198",email = "andres.quintero1228@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jax (>=0.10.1,<0.11.0)",
    "jaxtyping (>=0.3.9,<0.4.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]

[tool.poetry]
package-mode = false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
